# multi-label-emotion-classification-reddit-comments

./: Makefile  README.md  pyproject.toml  requirements.txt  results.txt
configs/: base.yaml
outputs/goemotions_roberta/logs/: events.out.tfevents.1757853522.MSI.12340.0
sagemaker/: requirements.txt
sagemaker/deploy/: train_and_deploy.py
sagemaker/entrypoint/: inference.py  train.py
src/: __init__.py  config.py  data.py  inference.py  metrics.py  modeling.py  test_threshold.py  threshold.py  train.py  utils.py
src/outputs/goemotions_roberta/logs/: events.out.tfevents.1757859371.MSI.18860.0
