[project]
name = "multi-label-emotion-classification-reddit-comments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.33.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.2",
    "peft>=0.11.1",
    "scikit-learn>=1.3.0",
    "transformers>=4.42.0",
]
